--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,8 @@
 #app {
+  height: 100vh;
+  width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
+  // margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
